force-app/main/default/objects/Ayuda_Portal__c/Ayuda_Portal__c.object-meta.xml
<CustomObject>
    <label>Ayuda Portal</label>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ayuda Portal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>