force-app/main/default/objects/Ayuda_Portal__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <label>Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocumentosRequeridos</valueSetName>
    </valueSet>
</CustomField>