force-app/main/default/objects/Ayuda_Portal__c/fields/InlineHelp__c.field-meta.xml
<CustomField>
    <fullName>InlineHelp__c</fullName>
    <label>Ayuda inline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>