force-app/main/default/objects/Ayuda_Portal__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ayuda Portal</relationshipLabel>
    <relationshipName>Ayuda_Portal</relationshipName>
    <type>Lookup</type>
</CustomField>