force-app/main/default/objects/Ayuda_Portal__c/fields/Respuesta__c.field-meta.xml
<CustomField>
    <fullName>Respuesta__c</fullName>
    <label>Respuesta</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>