force-app/main/default/objects/Ayuda_Portal__c/fields/T_tulo_Link__c.field-meta.xml
<CustomField>
    <fullName>T_tulo_Link__c</fullName>
    <label>Título Link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>