force-app/main/default/objects/Ayuda_Portal__c/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <formula>HYPERLINK(  Link__c  ,  T_tulo_Link__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Video</label>
    <type>Text</type>
</CustomField>