force-app/main/default/objects/Ayuda_Portal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>