force-app/main/default/objects/Ayuda_Portal__c/listViews/Para_Comunidad.listView-meta.xml
<ListView>
    <fullName>Para_Comunidad</fullName>
    <columns>Descripcion__c</columns>
    <columns>Video__c</columns>
    <filterScope>Everything</filterScope>
    <label>Para Comunidad</label>
</ListView>